# eat-right-backend

./: Dockerfile  README.md  config.py  database.db  docker-compose.yml  main.py  pyproject.toml  utils.py
dependencies/: db.py  deps.py
migrations/: env.py
migrations/versions/: 963307225291_alembic_set_up.py  a179507abe00_alembic_set_up.py  b072c3a7a6d8_setting_up_alembic.py
models/: contact_model.py  review_model.py  user_model.py
routes/: users_route.py
