[tool.poetry]
name = "eat-right-backend"
version = "0.1.0"
description = ""
authors = ["fortune1237 <okolofortune4@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
passlib = {extras = ["cryptcontext"], version = "^1.7.4"}
uvicorn = "^0.29.0"
fastapi = "^0.110.1"
pydantic = {extras = ["email"], version = "^2.6.4"}
sqlmodel = "^0.0.16"
python-jose = "^3.3.0"
python-multipart = "^0.0.9"
utils = "^1.0.2"
pydantic-settings = "^2.2.1"
fastapi-mail = "^1.4.1"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
